--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<img src="Images/euler.png" alt="project euler logo">
 </header>
 <section>
-   <h1>Project Euler - First Four Answers</h1>
+   <h1>Project Euler - First Ten Answers</h1>
    <h2 id="inspirational_quote">No one said you could turn off your brain!</h2>
    <article id='problem_1'>
 	 <div>
@@ -20,6 +20,7 @@
 		<button id='button1' onclick='multiples()'>Calculate</button>
 		<button id='button1' onclick='clear()'>Clear</button>
 		<p>Answer: <span id='paragraph'></span></p>
+		<p>Calculation Time (ms): <span id='paragraph_1'></span></p>
 	  </div>
    </article>
    <article id='problem_2'>
@@ -31,6 +32,7 @@
    			<input type="text" id='textToChange2' value="4000000">
    			<button id='button1' onclick="fibonacci()">Calculate</button>
    			<p>Answer: <span id='paragraph2'></span></p>
+   			<p>Calculation Time (ms): <span id='paragraph2_1'></span></p>
    		</div>
    </article>
    <article id='problem_3'>
@@ -41,6 +43,7 @@
    			<input type="text" id='textToChange3' value="600851475143">
    			<button id='button1' onclick="prime()">Calculate</button>
    			<p>Answer: <span id='paragraph3'></span></p>
+   			<p>Calculation Time (ms): <span id='paragraph3_1'></span></p>
    		</div>
    </article>
    <article id='problem_4'>
@@ -51,6 +54,91 @@
    			<input type="text" id='textToChange4' value="N/A">
    			<button id='button1' onclick="palindrome()">Calculate</button>
    			<p>Answer: <span id='paragraph4'></span></p>
+   			<p>with x: <span id='paragraph4_1'></span></p> 
+   			<p>and y: <span id='paragraph4_2'></span></p>
+   			<p>Calculation Time (ms): <span id='paragraph4_3'></span></p>
+   		</div>
+   </article>
+   <article id='problem_5'>
+   		<div>
+   			<h2>Problem 5: Smallest multiple</h2>
+   			<p>2520 is the smallest number that can be divided by each of the numbers from 1 to 10 without any remainder.</p>
+   			<p>What is the smallest positive number that is evenly divisible by all the numbers from 1 to 20?</p>
+   			<input type="text" id='textToChange5' value="N/A">
+   			<button id='button1' onclick="smallestmultiple()">Calculate</button>
+   			<p>Answer: <span id='paragraph5'></span></p>
+   			<p>Calculation Time (ms): <span id='paragraph5_1'></span></p>
+   		</div>
+   </article>
+   <article id='problem_6'>
+   		<div>
+   			<h2>Problem 6: Smallest multiple</h2>
+   			<p>The sum of the squares of the first ten natural numbers is,</p>
+   			<p>1<sup>2</sup> + 2<sup>2</sup> + ... + 10<sup>2</sup> = 385</p>
+   			<p>The square of the first ten natural numbers is,</p>
+   			<p>(1 + 2 + ... + 10)<sup>2</sup> = 55<sup>2</sup> = 3025</p>
+   			<p>Hence the difference between the sum of the squares of the first ten natural numbers and the square of the sum is 3025 - 385 = 2640.</p>
+   			<p>Find the difference between the sum of the squares of the first one hundred natural numbers and the square of the sum.</p>
+   			<input type="text" id='textToChange6' value="100">
+   			<button id='button1' onclick="Sumsquaredifference()">Calculate</button>
+   			<p>Answer: <span id='paragraph6'></span></p>
+   			<p>Calculation Time (ms): <span id='paragraph6_1'></span></p>
+   		</div>
+   </article>
+   <article id='problem_7'>
+   		<div>
+   			<h2>Problem 7: 10001st prime</h2>
+   			<p>By listing the first six prime numbers: 2, 3, 5, 7, 11, and 13, we can see that the 6th prime is 13.</p>
+   			<p>What is the 10 001st prime number?</p>
+   			<input type="text" id='textToChange7' value="10001">
+   			<button id='button1' onclick="primefinder()">Calculate</button>
+   			<p>Answer: <span id='paragraph7'></span></p>
+   			<p>Calculation Time (ms): <span id='paragraph7_1'></span></p>
+   		</div>
+   </article>
+   <article id='problem_8'>
+   		<div>
+   			<h2>Problem 8: Largest product in a series</h2>
+   			<p>The four adjacent digits in the 1000-digit number that have the greatest product are 9 x 9 x 8 x 9 = 5832.</p>
+   			<code>73167176531330624919225119674426574742355349194934 <br>
+			96983520312774506326239578318016984801869478851843<br>
+			85861560789112949495459501737958331952853208805511<br>
+			12540698747158523863050715693290963295227443043557<br>
+			66896648950445244523161731856403098711121722383113<br>
+			62229893423380308135336276614282806444486645238749<br>
+			30358907296290491560440772390713810515859307960866<br>
+			70172427121883998797908792274921901699720888093776<br>
+			65727333001053367881220235421809751254540594752243<br>
+			52584907711670556013604839586446706324415722155397<br>
+			53697817977846174064955149290862569321978468622482<br>
+			83972241375657056057490261407972968652414535100474<br>
+			82166370484403199890008895243450658541227588666881<br>
+			16427171479924442928230863465674813919123162824586<br>
+			17866458359124566529476545682848912883142607690042<br>
+			24219022671055626321111109370544217506941658960408<br>
+			07198403850962455444362981230987879927244284909188<br>
+			84580156166097919133875499200524063689912560717606<br>
+			05886116467109405077541002256983155200055935729725<br>
+			71636269561882670428252483600823257530420752963450</code>
+   			<p>Find the thirteen adjacent digits in the 1000-digit number that have the greatest product. What is the value of this product?</p>
+   			<input type="text" id='textToChange8' value="N/A">
+   			<button id='button1' onclick="largestproduct()">Calculate</button>
+   			<p>Answer: <span id='paragraph8'></span></p>
+   			<p>Calculation Time (ms): <span id='paragraph8_1'></span></p>
+   		</div>
+   </article>
+   <article id='problem_9'>
+   		<div>
+   			<h2>Problem 9: Special Pythagorean triplet</h2>
+   			<p>A pythagorean triplet is a set of three natural numbers, a < b < c, for which,</p>
+   			<p>a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></p>
+   			<p>For example, 3<sup>2</sup> + 4<sup>2</sup> = 9 + 16 = 25 = 5<sup>2</sup></p>
+   			<p>There exists exactly one Pythagorean triplet for which a + b+ c = 1000.</p>
+   			<p>Find the product abc.</p>
+   			<input type="text" id='textToChange9' value="10001">
+   			<button id='button1' onclick="()">Calculate</button>
+   			<p>Answer: <span id='paragraph7'></span></p>
+   			<p>Calculation Time (ms): <span id='paragraph9_1'></span></p>
    		</div>
    </article>
  <script src="javascript.js">
